@@ -2,6 +2,9 @@ Cascading Change Log
 
 3.3.0 [unreleased]
 
+  Fixed issue where planning with a c.p.Merge of two or more c.p.HashJoins would fail. Currently unresolved for the
+  Apache Tez planner.
+
   Fixed issue where c.t.h.PartitionTap could not initialize with more than a few thousand input partitions in a
   reasonable time frame. Fix supports PartitionTap initialization in under 10sec w/ 1 million paths.
 
